[tool.poetry]
name = "pytest-tips-n-tricks"
version = "0.1.0"
description = "pytest tips and tricks for a better testsuite"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pygments = "^2.18.0"
hypothesis = "^6.105.1"
pytest-mock = "^3.14.0"
pytest-recording = "^0.13.1"
pytest-httpserver = "^1.0.10"
requests = "^2.32.3"
responses = "^0.25.3"
cookiecutter = "^2.6.0"
pytest-cov = "^5.0.0"
pytest-instafail = "^0.5.0"
pytest-rich = "^0.1.1"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.23.7"
pyyaml = "^6.0.1"
sphinx = "^7.3.7"
tox = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
